--- a/docs/1.documento_especificacao.md
+++ b/docs/1.documento_especificacao.md
@@ -38,6 +38,6 @@
 
 ## Metadados
 
-- fonteDefinicao e responsavelDefinicao.
+- rdfs:comments (definição das classes), dc:creator (quem criou a definição), dc:source (referência para a definição).
 
   
